# thesis-ai

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  __main__.py
app/pdf/: __init__.py  document.py  pdf_utils.py  storage.py
